feat(nav-bar): integrate i18n for menu options and update routing

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,3 +1,9 @@
 {
-    "hello": "hello in english"
+    "menuOptions": {
+        "transaction": "Transaction",
+        "inventory": "Inventory",
+        "debtors": "Debtors",
+        "movements": "Movements",
+        "logout": "Logout"
+    }
 }
