feat(debts-page): add traduction to search bar and button on debts-user-card

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -5,5 +5,9 @@
         "debtors": "Debtors",
         "movements": "Movements",
         "logout": "Logout"
+    },
+    "debtors": {
+        "search": "Search Debtor",
+        "details": "details"
     }
 }
