--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -7,7 +7,18 @@
         "logout": "Salir"
     },
     "debtors": {
-        "search": "Buscar Deudor",
+        "search": "Buscar deudor",
         "details": "detalles"
+    },
+    "inventory":{
+        "search": "Buscar producto",
+        "newProduct": "Nuevo producto",
+        "labels":{
+            "name": "Producto",
+            "category": "Categoría",
+            "subcategory": "Subcategoria",
+            "price": "Precio",
+            "stock": "Stock"
+        }
     }
 }
