feat(invoice-collection): add translation to collection debts table

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -41,7 +41,7 @@
             "date": "Date",
             "invoice": "Invoice",
             "total": "Total",
-            "Actions": "Actions"
+            "actions": "Actions"
         }
     },
     "movements":{
