feat(i18n): add internationalization for new category and update product forms

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -32,6 +32,18 @@
             "subcategory": "Subcategory",
             "price": "Price",
             "stock": "Stock"
+        },
+        "form": {
+            "changeImage": "Change Image",
+            "name": "Product name",
+            "salePrice": "Sale price",
+            "buyingPrice": "Buying price",
+            "quantity": "Quantity",
+            "categoryPlaceholder": "Category",
+            "subcategoryPlaceholder": "Subcategory",
+            "categoryName": "Category name",
+            "categoryDescription": "Description",
+            "saveButton": "Save"
         }
     },
      "debtors": {
