feat (new-product): create component to add news products

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -25,7 +25,8 @@
     },
     "inventory":{
         "search": "Search product",
-        "newProduct": "New product",
+        "newProduct": "New Product",
+        "editProduct": "Edit Product",
         "labels":{
             "name": "Product",
             "category": "Category",
