fix (translations): fix modal title of new category and new subcategory

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -44,6 +44,7 @@
             "subcategoryPlaceholder": "Subcategory"
         },
         "newProduct":{
+            "title": "Create Product",
             "changeImage": "Change Image",
             "imageLabel": "Select an image",
             "name": "Product name",
@@ -52,10 +53,12 @@
             "quantity": "Quantity"
         } ,
         "newCategory": {
+            "title": "New Category",
             "name": "Category name",
             "description": "Description"
         },
         "newSubcategory":{
+            "title": "New Subcategory",
             "name": "Subcategory name",
             "description": "Description"
         }
