feat (toast composable): add composable to create toast

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -5,6 +5,11 @@
         "edit": "Edit",
         "cancel": "Cancel"
     },
+    "toast": {
+        "success": "Success",
+        "error": "Error",
+        "info": "Info"
+    },
     "menuOptions": {
         "transaction": "Transaction",
         "inventory": "Inventory",
