--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -6,6 +6,11 @@
         "cancel": "Cancelar",
         "search": "Buscar"
     },
+    "toast": {
+        "success": "Éxito",
+        "error": "Error",
+        "info": "Info"
+    },
     "menuOptions": {
         "transaction": "Transacción",
         "inventory": "Inventario",
