--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -10,6 +10,29 @@
         "error": "Error",
         "info": "Info"
     },
+
+    "auth":{
+        "attribution": {
+            "button": "Attribution",
+            "title": "Attribution",
+            "label": "Free SVG Background by: "
+        },
+        "login": {
+            "title": "Welcome!",
+            "username": "Username",
+            "password": "Password",
+            "button" : "LogIn" ,
+            "changeForm": "Sign Up Here!"
+        },
+        "register": {
+            "title": "New User",
+            "username": "Username",
+            "password": "Password",
+            "confirmPassword": "Confirm password",
+            "button" : "register",
+            "changeForm": "Sign In here!"
+        }
+    },
     "menuOptions": {
         "transaction": "Transaction",
         "inventory": "Inventory",
