feat (translates): implement traduction in update and new product forms

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -74,6 +74,7 @@
             "changeImage": "Change Image",
             "imageLabel": "Select an image",
             "name": "Product name",
+            "description": "Product Description",
             "salePrice": "Sale price",
             "buyingPrice": "Buying price",
             "quantity": "Quantity"
