feat(new-product): implement edit and delete button to subcategory and category select

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -57,7 +57,9 @@
     "inventory":{
         "search": "Search product",
         "newProductButton": "New Product",
-        "editProduct": "Edit Product",
+        "newCategoryButton": "New Category",
+        "newSubcategoryButton": "New Subcategory",
+        "editProduct": "Update Product",
         "labels":{
             "name": "Product",
             "category": "Category",
