--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -57,6 +57,8 @@
     "inventory":{
         "search": "Buscar producto",
         "newProductButton": "Nuevo Producto",
+        "newCategoryButton": "Nueva Categoría",
+        "newSubcategoryButton": "Nueva Subcategoría",
         "editProduct": "Editar Producto",
 
         "labels":{
