feat (new-product): implement logic to use more forms

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -90,6 +90,16 @@
             "title": "New Subcategory",
             "name": "Subcategory name",
             "description": "Description"
+        },
+        "updateCategory": {
+            "title": "Update Category",
+            "name": "Category name",
+            "description": "Description"
+        },
+        "updateSubcategory": {
+            "title": "New Subcategory",
+            "name": "Subcategory name",
+            "description": "Description"
         }
     },
      "debtors": {
