--- a/i18n/locales/es/response.json
+++ b/i18n/locales/es/response.json
@@ -5,6 +5,10 @@
         "SUBCATEGORY_EXISTS" : "La subcategoría ya existe",
         "ILLEGAL_ARGUMENT": "Los datos enviados no son válidos",
         "UNKNOWN_ERROR": "Ha ocurrido un error inesperado"
+    },
+    "success": {
+      "new_category": "¡Categoría creada exitosamente!",
+      "new_subcategory": "¡Subcategoría creada exitosamente!"
     }
   }
 }
