--- a/i18n/locales/en/response.json
+++ b/i18n/locales/en/response.json
@@ -1,14 +1,21 @@
 {
   "response": {
     "error": {
-        "CATEGORY_EXISTS": "this category already exist",
-        "SUBCATEGORY_EXISTS" : "this subcategory already exist",
-        "ILLEGAL_ARGUMENT": "The submitted data is invalid",
-        "UNKNOWN_ERROR": "An unexpected error occurred"
+      "CATEGORY_EXISTS": "this category already exist",
+      "SUBCATEGORY_EXISTS": "this subcategory already exist",
+      "ILLEGAL_ARGUMENT": "The submitted data is invalid",
+      "UNKNOWN_ERROR": "An unexpected error occurred"
     },
     "success": {
-      "new_category": "Category created successfully!",
-      "new_subcategory": "Subcategory created successfully!"
+      "new_category": "Category created successfully",
+      "new_subcategory": "Subcategory created successfully",
+      "new_product": "Product created successfully!",
+      "update_category": "Category updated successfully",
+      "update_subcategory": "Subcategory updated successfully",
+      "update_product": "Product updated successfully!",
+      "delete_category": "Category deleted successfully",
+      "delete_subcategory": "Subcategory deleted successfully",
+      "delete_product": "Product deleted successfully!"
     }
   }
 }
