--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -21,7 +21,7 @@
     "delete": {
       "header": "Confirm Deletion",
       "product": {
-        "message": "Are you sure you want to delete {name}?"
+        "message": "Are you sure you want to delete '{name}'?"
       },
       "category": {
         "message": "Are you sure you want to delete this category?. \n This will permanently remove all associated products and subcategories."
