--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -24,10 +24,10 @@
         "message": "Are you sure you want to delete '{name}'?"
       },
       "category": {
-        "message": "Are you sure you want to delete this category?. \n This will permanently remove all associated products and subcategories."
+        "message": "Are you sure you want to delete '{name}'?. \n This will permanently remove all associated products and subcategories."
       },
       "subcategory": {
-        "message": "Are you sure you want to delete this subcategory?. \n This will permanently remove all associated products."
+        "message": "Are you sure you want to delete {name}?. \n This will permanently remove all associated products."
       }
     }
   }
