--- a/i18n/locales/es/common.json
+++ b/i18n/locales/es/common.json
@@ -25,10 +25,10 @@
         "message": "¿Desea eliminar el producto {name}?"
       },
       "category": {
-        "message": "¿Desea eliminar esta categoría?.\n Esta acción eliminara los productos y subcategorias relacionados."
+        "message": "¿Desea eliminar la categoría '{name}'?.\n Esta acción eliminara los productos y subcategorias relacionados."
       },
       "subcategory": {
-        "message": "¿Desea eliminar esta subcategoría?.\n Esta acción eliminara los productos relacionados."
+        "message": "¿Desea eliminar la subcategoría '{name}'?.\n Esta acción eliminara los productos relacionados."
       }
     }
   }
