--- a/i18n/locales/es/transaction.json
+++ b/i18n/locales/es/transaction.json
@@ -13,6 +13,16 @@
     "formDebtor": {
       "name": "Nombre del cliente",
       "phone": "Número del cliente"
-    }
+    },
+    "type":{
+      "buy": "Compra",
+      "sell": "Venta",
+      "credit": "Fiado"
+    },
+    "payment":{
+      "cash": "Efectivo",
+      "transfer": "Transferencia"
+    },
+    "submit": "Guardar"
   }
 }
