feat(transaction): add product search functionality with dynamic filtering
- Introduced `fetchAllProductsByName` in `use-get-product.ts` for filtered product retrieval.
- Updated `select-product.vue` to support product search and display results dynamically.
- Enhanced i18n translations with `searchProduct` and `noResults` keys for multilingual support.
- Adjusted components and pages to pass pagination and filtering parameters explicitly.

--- a/i18n/locales/en/transaction.json
+++ b/i18n/locales/en/transaction.json
@@ -23,6 +23,8 @@
       "cash": "Cash",
       "transfer": "Transfer"
     },
-    "submit": "Submit"
+    "submit": "Submit",
+    "searchProduct": "Search product",
+    "noResults": "No results"
   }
 }
