--- a/i18n/locales/es/transaction.json
+++ b/i18n/locales/es/transaction.json
@@ -23,6 +23,8 @@
       "cash": "Efectivo",
       "transfer": "Transferencia"
     },
-    "submit": "Guardar"
+    "submit": "Guardar",
+    "searchProduct": "Buscar producto",
+    "noResults": "No hay resultados"
   }
 }
