fix (pages): implement not found message

--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -30,5 +30,8 @@
         "message": "Are you sure you want to delete {name}?. \n This will permanently remove all associated products."
       }
     }
+  },
+  "records":{
+    "notFound": "No records found"
   }
 }
