feat (components): implement mask wrapper to phone input in new debtor component

--- a/i18n/locales/en/transaction.json
+++ b/i18n/locales/en/transaction.json
@@ -11,6 +11,7 @@
       "total": "Total"
     },
     "formDebtor": {
+      "title": "New Client",
       "name": "Client name",
       "phone": "Phone number"
     },
