--- a/i18n/locales/es/transaction.json
+++ b/i18n/locales/es/transaction.json
@@ -11,6 +11,7 @@
       "total": "Total"
     },
     "formDebtor": {
+      "title": "Crear Cliente",
       "name": "Nombre del cliente",
       "phone": "Número del cliente"
     },
