feat (translate): change keys in transaction file

--- a/i18n/locales/en/transaction.json
+++ b/i18n/locales/en/transaction.json
@@ -4,13 +4,14 @@
     "typeMovementPlaceholder": "Type of movement",
     "debtorSelectPlaceholder": "Debtor",
     "paymentTypePlaceholder": "Payment Type",
+    "selectProductTitle": "Select Customer Products",
     "table": {
       "product": "Product",
       "quantity": "Quantity",
       "price": "Price",
       "total": "Total"
     },
-    "formDebtor": {
+    "newClient": {
       "title": "New Client",
       "name": "Client name",
       "phone": "Phone number"
