--- a/i18n/locales/es/transaction.json
+++ b/i18n/locales/es/transaction.json
@@ -4,13 +4,14 @@
     "typeMovementPlaceholder": "Tipo de movimiento",
     "debtorSelectPlaceholder": "Deudor",
     "paymentTypePlaceholder": "Tipo de pago",
+    "selectProductTitle": "Selecciona los productos del cliente",
     "table": {
       "product": "Producto",
       "quantity": "Cantidad",
       "price": "Precio",
       "total": "Total"
     },
-    "formDebtor": {
+    "newClient": {
       "title": "Crear Cliente",
       "name": "Nombre del cliente",
       "phone": "Número del cliente"
