feat (components): change site of new client button

--- a/i18n/locales/en/transaction.json
+++ b/i18n/locales/en/transaction.json
@@ -5,6 +5,7 @@
     "debtorSelectPlaceholder": "Debtor",
     "paymentTypePlaceholder": "Payment Type",
     "selectProductTitle": "Select Customer Products",
+    "newClientButton": "Create Client",
     "table": {
       "product": "Product",
       "quantity": "Quantity",
