feat (translates): change key and value of client select placeholder

--- a/i18n/locales/en/transaction.json
+++ b/i18n/locales/en/transaction.json
@@ -2,7 +2,7 @@
   "transaction": {
     "addProduct": "Add product",
     "typeMovementPlaceholder": "Type of movement",
-    "debtorSelectPlaceholder": "Debtor",
+    "clientSelectPlaceholder": "Client",
     "paymentTypePlaceholder": "Payment Type",
     "selectProductTitle": "Select Customer Products",
     "newClientButton": "Create Client",
