--- a/i18n/locales/es/transaction.json
+++ b/i18n/locales/es/transaction.json
@@ -2,7 +2,7 @@
   "transaction": {
     "addProduct": "Añadir producto",
     "typeMovementPlaceholder": "Tipo de movimiento",
-    "debtorSelectPlaceholder": "Deudor",
+    "clientSelectPlaceholder": "Cliente",
     "paymentTypePlaceholder": "Tipo de pago",
     "selectProductTitle": "Selecciona los productos del cliente",
     "newClientButton": "Crear Cliente",
