feat (all): change name of movements page to history page

--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -3,7 +3,7 @@
     "transaction": "Transaction",
     "inventory": "Inventory",
     "debtors": "Debtors",
-    "movements": "Movements",
+    "history": "History",
     "logout": "Logout"
   },
   "button": {
