--- a/i18n/locales/es/common.json
+++ b/i18n/locales/es/common.json
@@ -3,7 +3,7 @@
     "transaction": "Transacción",
     "inventory": "Inventario",
     "debtors": "Deudores",
-    "movements": "Movimientos",
+    "history": "Historial",
     "logout": "Salir"
   },
   "button": {
