fix (translations): fix error on update subcategory form keys

--- a/i18n/locales/en/inventory.json
+++ b/i18n/locales/en/inventory.json
@@ -42,7 +42,7 @@
       "description": "Description"
     },
     "updateSubcategory": {
-      "title": "New Subcategory",
+      "title": "Update Subcategory",
       "name": "Subcategory name",
       "description": "Description"
     }
